--- a/Core/package.json
+++ b/Core/package.json
@@ -1,11 +1,12 @@
 {
   "name": "core",
   "version": "1.0.0",
-  "description": "The core for IELtSLearningApplication",
+  "description": "The core for IELsTLearningApplication",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "prettier": "prettier --single-quote --trailing-comma all --tab-width 4 --semi true --write 'src/**/*.{js,json,scss}'"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,14 @@
   ],
   "author": "Hoang Gia Huy",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.{js,json}": "prettier --single-quote --trailing-comma all --tab-width 4 --semi true --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "bugs": {
     "url": "https://github.com/Hoanghuygia/IELsTLearningApplication/issues"
   },
@@ -23,8 +32,16 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "helmet": "^7.1.0",
     "http-errors": "^2.0.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5"
   }
 }
