--- a/Core/package.json
+++ b/Core/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "nodemon src/index.js",
     "prettier": "prettier --single-quote --trailing-comma all --tab-width 4 --semi true --write 'src/**/*.{js,json,scss}'"
   },
   "repository": {
@@ -31,6 +30,7 @@
   },
   "homepage": "https://github.com/Hoanghuygia/IELsTLearningApplication#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "helmet": "^7.1.0",
