--- a/Core/package.json
+++ b/Core/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/Hoanghuygia/IELsTLearningApplication#readme",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -39,7 +40,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "openai": "^4.77.0"
   },
   "devDependencies": {
     "husky": "^9.0.11",
